--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -9,7 +9,7 @@ main {
         font-size: calc(50px + (110 - 50) * ((100vw - 320px) / (1680 - 320)));
         margin: 0;
         padding-top: calc(15px + (60 - 15) * ((100vw - 320px) / (1680 - 320)));
-        transition: all 0.7s;
+        transition: all 1s;
         height: 20%;
         color: blue;
 
@@ -59,6 +59,7 @@ main {
             height: 10%;
 
              button {
+                 cursor: pointer;
                 @include button();
             }
 
@@ -95,6 +96,7 @@ main {
                 width: 50%;
                 background: white;
                 z-index: 999;
+                cursor: pointer;
 
                 &:focus,
                 &:active,
@@ -165,7 +167,8 @@ main {
                 padding: 0.3% 1%;
                 box-shadow: 5px 5px 0 blue;
                 background: white;
-                z-index: 999;
+                transition: all 0.5s;
+                cursor: pointer;
 
                 &:focus,
                 &:active,
@@ -190,7 +193,6 @@ main {
 
             .bonusTime {
                 opacity: 0;
-                transition: all 0.5s;
             }
         }
 
@@ -208,9 +210,11 @@ main {
                 perspective: 700px;
                 width: 21%;
                 height: 21%;
+                z-index: 999;
                 background: none;
                 border: none;
                 transition: all 0.5s;
+                cursor: pointer;
     
                 &.matched {
                     transform: scale(0.5);
@@ -313,6 +317,7 @@ main {
                 background: white;
                 margin-bottom: 80px;
                 z-index: 999;
+                cursor: pointer;
 
                 &:focus,
                 &:active,
