--- a/styles/style.css
+++ b/styles/style.css
@@ -564,6 +564,10 @@ main .gameBoard .result p {
     font-size: 2.5rem;
   }
 }
+main .gameBoard .result p span {
+  font-size: 5rem;
+  color: blue;
+}
 main .gameBoard .result .playAgain {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
@@ -612,7 +616,7 @@ main .textMatch {
   background: rgba(98, 162, 224, 0.5);
   position: absolute;
   font-size: 2rem;
-  top: 15%;
+  top: 13%;
   left: 30%;
   text-align: center;
   padding: 10px;
