--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -311,6 +311,7 @@ main {
 
                 @include mq-420 {
                     font-size: 8rem;
+                    margin-top: 5.5rem;
                 }
             }
 
@@ -319,12 +320,16 @@ main {
                 z-index: 2;
                 margin-top: 0;
 
+                @include mq-768 {
+                    font-size: 3.5rem;
+                }
+
                 @include mq-420 {
                     font-size: 2.5rem;
                 }
 
                 span {
-                    font-size: 5rem;
+                    font-size: 4rem;
                     color: blue;
                 }
             }
@@ -347,6 +352,18 @@ main {
                 &:hover {
                     transform: translate(4px, 4px);
                     box-shadow: 4px 4px blue;
+                }
+
+                @include mq-420 {
+                    box-shadow: 5px 5px 0 blue;
+                    font-size: 2.1rem;
+
+                    &:focus,
+                    &:active,
+                    &:hover {
+                        transform: translate(2.5px, 2.5px);
+                        box-shadow: 2.5px 2.5px blue;
+                    }
                 }
             }
         }
